[package]
name = "ui"
version = "0.1.0"
edition = "2024"
publish = false

[[example]]
name = "basic"
path = "examples/basic/src/main.rs"

[[example]]
name = "buttons"
path = "examples/buttons/src/main.rs"

[[example]]
name = "scroller"
path = "examples/scroller/src/main.rs"

[[example]]
name = "idle-hue"
path = "examples/idle-hue/src/main.rs"

[dependencies]
backer = { git = "https://github.com/cyypherus/backer", branch = "tu" }
clipboard-rs = "0.2.4"
lilt = "0.7.0"
parley = "0.5.0"
pollster = "0.4.0"
tokio = { version = "1.43.0", features = ["full"] }
vello_svg = { version = "0.6.0", features = ["wgpu"] }
winit = "0.30.8"

[dev-dependencies]
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["fs"] }
