[package]
name = "ui"
version = "0.1.0"
edition = "2024"
publish = false

[[example]]
name = "basic"
path = "examples/basic/src/main.rs"

[[example]]
name = "buttons"
path = "examples/buttons/src/main.rs"

[[example]]
name = "scroller"
path = "examples/scroller/src/main.rs"

[[example]]
name = "image"
path = "examples/image/src/main.rs"

[dependencies]
# backer = { git = "https://github.com/cyypherus/backer", branch = "mvp" }
backer = { path = "../backer" }
bytemuck = { version = "1", features = ["derive"] }
clipboard-rs = "0.3.0"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
] }
parley = "0.7.0"
pollster = "0.4.0"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
vello_svg = { version = "0.9.0", features = ["wgpu"] }
wgpu = "27.0.1"
winit = "0.30.12"

[dev-dependencies]
arboard = "3.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["fs"] }
