[package]
name = "idle-hue"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
ui = { path = "../../" }
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["fs"] }
vello_svg = "0.6.0"
parley = "0.5.0"

[package.metadata.bundle]
name = "idle-hue"
identifier = "cyy.apps.idle-hue"
